// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render right thing and don't change unexpected 1`] = `
<div
  className="btn-group"
  style={undefined}
/>
`;

exports[`should render right thing and don't change unexpected with different sizes 1`] = `
<div
  className="btn-group btn-group-xs"
  style={undefined}
/>
`;

exports[`should render right thing and don't change unexpected with different sizes 2`] = `
<div
  className="btn-group btn-group-sm"
  style={undefined}
/>
`;

exports[`should render right thing and don't change unexpected with different sizes 3`] = `
<div
  className="btn-group btn-group-lg"
  style={undefined}
/>
`;

exports[`should render right thing and don't change unexpected with different sizes 4`] = `
<div
  className="btn-group btn-group-xl"
  style={undefined}
/>
`;
